Inizia le teoria dei campi

--- a/Algebra.tex
+++ b/Algebra.tex
@@ -100,9 +100,17 @@
 \end{center}
 \small
 
+Gli appunti sono in fase di costruzione, potrebbero essere pieni di errori e quant'altro.\\
+Se volete aiutarmi a sistemare qualcosa, fatelo, stanno su GitHub apposta.
+
 \tableofcontents
+
+\bigskip
+Per tutto quello che riguarda gli interi di Gauss, rifarsi a \href{http://www.math.uconn.edu/~kconrad/blurbs/ugradnumthy/Zinotes.pdf}{$ \blacksquare $}.
+
 \include{gruppi}
 \include{anelli}
+\include{campi}
 
 %\newpage
 %\listoftheorems[ignoreall,show={theorem}]
