--- a/Algebra.tex
+++ b/Algebra.tex
@@ -67,6 +67,7 @@
 \renewcommand{\S}{\mathcal{S}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\K}{\mathbb{K}}
+\newcommand{\LR}{\quad\Leftrightarrow\quad}
 
 \newcommand{\fun}[5]{
 	\begin{align*}
