--- a/campi.tex
+++ b/campi.tex
@@ -5,7 +5,7 @@
 \begin{multicols}{2}
 
 \begin{definition}
-	Data un'estensione di campi $ K \subseteq L $, un elemento $ \alpha \in L $ si dice \emph{algebrico} su $ K $ quando 
+	Data un'estensione di campi $ K \subseteq L $ (o anche $ \faktor{L}{K} $), un elemento $ \alpha \in L $ si dice \emph{algebrico} su $ K $ quando 
 	\[ \exists f \in K[x] \quad \text{tale che} \quad f(\alpha) = 0 \]
 	Un elemento si dice \emph{trascendente} se non è algebrico.
 \end{definition}
@@ -79,11 +79,11 @@ Elenchiamo ora una serie di proprietà delle torri di estensioni:
 	Un campo $ \Omega $ è detto \emph{algebricamente chiuso} quando ogni polinomio $ f \in \Omega[\, x\,] $ ammette almeno una radice in $ \Omega $.
 \end{definition}
 
-\begin{definition}(buggata)
+\begin{definition}
 	$ \bar{\Omega} $ è detta \emph{chiusura algebrica} di $ \Omega $ se:
 	\begin{enumerate}
 		\item $ \bar{\Omega} $ è algebricamente chiuso.
-		\item $ \bar{\Omega} \setminus \Omega $ è algebricamente chiuso.
+		\item $ \faktor{\bar{\Omega}}{\Omega} $ è algebrica.
 	\end{enumerate}
 \end{definition}
 
