teoria di Galois

--- a/Algebra.tex
+++ b/Algebra.tex
@@ -68,6 +68,7 @@
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\LR}{\quad\Leftrightarrow\quad}
+\newcommand{\Gal}[1]{\mathcal{G}al\left( #1 \right)}
 
 \newcommand{\fun}[5]{
 	\begin{align*}
