--- a/campi.tex
+++ b/campi.tex
@@ -30,7 +30,7 @@ l'immagine $ K[\alpha] $ è un sottoanello di un campo ed è quindi un dominio, 
 Possiamo però mostrare che, se $ \alpha $ è algebrico, questa operazione non è necessaria. Infatti, il nucleo dell'omomorfismo di valutazione è costituito da tutti quei polinomi che si annullano in $ \alpha $, i quali costituiscono un ideale principale (perché K[x] è \textsc{ed}, dunque \textsc{pid}):
 \[ \ker\varphi_\alpha = (\mu(x)) \]
 Abbiamo già osservato che  l'immagine è un dominio, dunque $ (\mu(x)) $ è un'ideale primo (\ref{idealequoziente}).
-\[ K[\alpha] \cong \faktor{K[x]}{(\mu(x))} \]
+\[ K[\alpha] \cong \frac{K[x]}{(\mu(x))} \]
 Ma, poiché ci troviamo in un \textsc{pid}, $ (\mu(x)) $ è anche un ideale massimale (\ref{primossemassimale}) e dunque $ K[\alpha] $ è un campo, che coincide con il proprio campo dei quozienti:
 \[ K[\,\alpha\,] = \Q(K[\,\alpha\,]) = K(\alpha) \]
 In questo caso, dobbiamo avere anche che $ \mu(x) $ è un polinomio irriducibile, possiamo quindi scegliere un rappresentate privilegiato tra i generatori del nucleo:
@@ -104,4 +104,168 @@ Elenchiamo ora una serie di proprietà delle torri di estensioni:
 \end{itemize}
 
 
+\end{multicols}
+
+
+\subsection{Separabilità e Normalità}
+
+
+\begin{multicols}{2}
+	
+	\begin{theorem}\label{est}
+		Sia $ \faktor{K(\alpha)}{K} $ un'estensione algebrica.\\ Ogni immersione
+		\[ \varphi: K \hookrightarrow \bar{K} \]
+		ammette esattamente tante estensioni quante le radici di $ \mu_\alpha $.
+	\end{theorem}
+	\begin{proof}
+		Consideriamo l'estensione algebrica come quoziente
+		\[ K(\alpha) \cong \frac{K[\, x \,]}{(\mu_\alpha)} \]
+		e definiamo l'estensione a partire da $ K[\, x \,] $ in modo che
+		\begin{align*}
+		\Phi\colon &K[\, x \,] \to \bar{K} \\
+		& 1 \mapsto 1 \\
+		& x \mapsto \beta 
+		\end{align*}
+		imponendo che il nucleo corrisponda con l'ideale generato dal polinomio minimo di $ \alpha $
+		\[ (\mu_\alpha) = \ker{\Phi} = \{ p \in K[\, x \,] \mid \varphi(p)(\beta) = 0 \} \]
+		otteniamo una mappa iniettiva, come cercato.
+		Dobbiamo pertanto scegliere $ \beta $ tra le radici di $ \varphi(\mu_\alpha) $; facendolo siamo sicuri che
+		\[ (\mu_\alpha) \subseteq \ker{\Phi} \]
+		ed essendo $ (\mu_\alpha) $ massimale e l'immagine non banale (perché stiamo quantomeno immergendo il campo), otteniamo
+		\[ (\mu_\alpha) = \ker{\Phi} \]
+	\end{proof}
+	\begin{remark}
+		Il teorema si generalizza facilmente per induzione ad estensioni finite. Vale inoltre un risultato analogo per estensioni infinite, che garantisce quantomeno l'esistenza dell'estensione.
+	\end{remark}
+
+
+	\begin{definition}[Separabile]
+		Un polinomio $ f \in K[x] $ si dice \emph{separabile} se ha tutte le radici distinte in $ \bar{K} $.
+		
+		Un'estensione algebrica $ \faktor{L}{K} $ si dice \emph{separabile} se, comunque scegliamo $\alpha \in L  $, il corrispondente polinomio minimo $ \mu_\alpha $ è separabile.
+	\end{definition}
+
+\begin{theorem}[Criterio della derivata]
+	Se siamo in caratteristica $ 0 $ o su un campo finito, allora tutti i polinomi irriducibili sono separabili.
+\end{theorem}
+\begin{proof}
+	Consideriamo $ f $ assieme alla sua derivata formale $ f' $. E' chiaro, per come è definita la derivata, che $ f $ ha radici multiple se e solo se ha radici in comune con $ f' $. Consideriamo
+	$$  \textsc{mcd}(f, f')  $$
+	che, poiché $ f $ è irriducibile, può essere solo $ 1 $ o $ f $.
+	
+	Osserviamo che l'\textsc{mcd} di due polinomi appartiene all'anello di definizione di questi, dunque se sono coprimi
+	\[ \exists g, h  \qquad fg +f'h = 1 \]
+	pertanto lo sono a maggior ragione nell'anello costruito sulla chiusura algebrica. Così, se $  \textsc{mcd}(f, f') = 1  $, abbiamo finito. Altrimenti dobbiamo avere che $ f'=0 $, ma è chiaro che questo non può succedere in caratteristica zero.
+	
+	Se ci mettiamo su $ \mathbb{F}_p[X] $, possiamo mostrare che
+	\[ f' = 0 \quad\Rightarrow\quad f = g^p \]
+	semplicemente scrivendo esplicitamente il polinomio e osservando che tutti i coefficienti che possono non essere nulli sono quelli dei termini $ x^{pk} $.
+\end{proof}
+
+\begin{theorem}
+	Sia $ \faktor{K(\alpha)}{K} $ un'estensione algebrica, di grado $ n $. Se è separabile, ogni immersione
+	\[ \varphi: K \hookrightarrow \bar{K} \]
+	ammette esattamente n estensioni.
+\end{theorem}
+\begin{proof}
+	Il grado di $ \mu_\alpha $ è $ n $, dunque ammette $ n $ radici distinte.
+\end{proof}
+\begin{remark}
+	Il teorema precedente si generalizza per induzione al caso di estensioni finite.
+\end{remark}
+
+\begin{definition}
+	In un'estensione algebrica $ \faktor{L}{K} $ si dicono \emph{coniugati} di un elemento $ \alpha \in L $, tutte le soluzioni del polinomio minimo $ \mu_\alpha $.
+\end{definition}
+
+\begin{remark}
+	Le estensioni $ \varphi_i $ del teorema di sopra sono proprio gli omomorfismi di coniugio, che mandano $ \alpha_1 \mapsto \alpha_i $.
+\end{remark}
+
+
+
+Introduciamo ora un'altra utile proprietà di alcune estensioni
+
+\begin{definition}[Normalità]
+	Un'estensione algebrica $ \faktor{F}{K} $ si dice \emph{normale} se, preso comunque un $ K $-omomorfismo
+	\[ \varphi \colon F \to \bar{K} \qquad\text{tale che } \varphi_{|K} = id \]
+	si ha che $ \varphi(F) = F $.
+\end{definition}
+
+\textbf{Esempi.}
+\begin{enumerate}
+	\item Tutte le estensioni di grado $ 2 $ sono normali.
+	\item $ \faktor{\Q(\sqrt[3]{2})}{\Q} $ non è normale.
+\end{enumerate}
+
+\begin{theorem}
+	In un'estensione $ \faktor{F}{K} $ algebrica e normale, ogni polinomio $ f \in K[\,x\,] $ irriducibile con almeno una radice in $ F $, ha tutte le radici in $ F $.
+\end{theorem}
+\begin{proof}
+	Consideriamo tutte le radici che $ f $ ammette in $ \bar{K} $: $ \alpha_1, \dots, \alpha_n $. Possiamo assumere \textsc{wlog} che $ \alpha_1 \in F $. Definiamo i $ K $-omomorfismi $ \varphi_1,\, \dots,\, \varphi_n $ in modo che
+	\fun{\varphi_i}{K(\alpha_1)}{\bar{K}}{\alpha_1}{\alpha_i}
+	Possiamo estenderli grazie al teorema \ref{est} a $ K $-omomorfismi
+	\[ \tilde{\varphi}_i \colon F \to K \] 
+	ma $ \faktor{F}{K} $ è normale, pertanto 
+	$$  \tilde{\varphi}_i(F) = F \qquad\forall \; i \in \{1, \dots, n\} $$
+	dunque $ \alpha_i \in F $ per ogni $ i $, come volevamo.
+	
+\end{proof}
+
+\begin{theorem}\label{carnorm}
+	Sia $ \faktor{F}{K} $ un'estensione (algebrica) finita. Questa è normale se e solo corrisponde al campo di spezzamento di una famiglia di polinomi in $ K[\,x\,] $.
+\end{theorem}
+\begin{proof}
+	$ \Rightarrow$. La finitezza ci dice che l'estensione è anche finitamente generata
+	 \[ F = K(\alpha_1, \dots, \alpha_n ) \]
+	ci basta dunque prendere la famiglia di polinomi $ \{\mu_{\alpha_i} \}_{i} $ e, per il teorema precedente, questi polinomi si spezzano in $ F $.
+	
+	$ \Leftarrow $. Supponiamo che $ F $ sia il campo di spezzamento della famiglia di polinomi $ \{f_i\}_{i \in I} $, con radici $ \{\alpha_i,j\}_{i,j} $. Abbiamo che 
+	\[F = K(\{\alpha_{i, j}\})\]
+	 Preso un $ K $-automorfismo
+	 \[ \varphi \colon F \to \bar{K} \]
+	 abbiamo già osservato nella dimostrazione del teorema \ref{est} che questo deve necessariamente permutare i coniugati, dunque sicuramente
+	 \[ \varphi(F) \subseteq F \]
+	 ma, visto che $ \varphi $ è iniettivo, $ \varphi(F) $ e $ F $ hanno lo stesso grado e pertanto sono la stessa estensione di $ K $
+\end{proof}
+
+\end{multicols}
+
+\subsection{Teoria di Galois}
+\begin{multicols}{2}
+	
+	\begin{definition}
+		Un'estensione $ \faktor{E}{K} $ algebrica si dice \emph{di Galois} se è sia normale che separabile.
+	\end{definition}
+	
+	(Da qui in avanti svilupperemo la Teoria di Galois per estensioni \emph{finite}, pertanto quando diremo che un'estensione ha questa proprietà, sottointenderemo la finitezza. )
+	
+	In questo caso il gruppo degli automorfismi 
+	\[ \text{Aut}_K(E) = \{ \varphi : E \to E \mid \varphi_K = id \} \]
+	per normalità sono proprio le estensioni delle immersioni di $ K $ nella sua chiusura algebrica
+	\[ \text{Aut}_K(E) = \{ \varphi : E \to \bar{K} \mid \varphi_K = id  \} \]
+	che, per separabilità, sono tante quante il grado dell'estensione
+	\[ |\text{Aut}_K(E)| = [E : K] \]
+	e viene chiamato gruppo di Galois dell'estensione
+	\[ \Gal{\faktor{E}{K}} := \text{Aut}_K(E) \]
+	
+	Possiamo anche parlare del gruppo di Galois di un polinomio, riferendoci indirettamente al gruppo di Galois dell'estensione del suo campo di spezzamento, le due definizioni sono equivalenti per la proposizione \ref{carnorm}.
+	
+	Pensarla in quest'ottica ci permette di procede con una piacevole osservazione:
+	\begin{remark}
+		Il gruppo di Galois è composto da tutti e soli quegli omomorfismi che coniugano le radici di $ f $, pertanto
+		\[ \Gal{f} \hookrightarrow \S_n \]
+		Inoltre l'azione del gruppo su queste radici è \emph{transitiva}, nel senso che appartengono tutte alla stessa orbita.
+	\end{remark}
+	
+	\textbf{Esempi.}
+	\begin{enumerate}
+		\item Se $ \faktor{E}{K} $ è di grado $ 2 $ e separabile, allora è di Galois e
+		\[ \Gal{\faktor{E}{K}} \cong \Z_2 \]
+		\item $ \Gal{x^3 -2} \cong \S_3 $
+		\item $ \Gal{\faktor{\Q(\zeta_7)}{\Q}} \cong \Z_6 $.
+		\item $ \Gal{\faktor{\Q(\zeta_7+ \zeta_7^{-1})}{\Q}} \cong \Z_3 $
+	\end{enumerate}
+	
+	
 \end{multicols}
