--- a/gruppi.tex
+++ b/gruppi.tex
@@ -647,7 +647,7 @@ dunque $ \Phi $ è un isomorfismo come desiderato.
 \end{enumerate}
 
 \columnbreak
-\textbf{Classificazione dei gruppi di ordine pq.} \\
+\subsubsection{Classificazione dei gruppi di ordine pq}
 
 Se $ p = q $, allora $ |G| = p^2 $, quindi $ G $ è abeliano. Allora necessariamente
 \[ G \cong \mathbb{Z}_{p^2}  \qquad \text{oppure} \qquad G \cong \mathbb{Z}_{p}\times\mathbb{Z}_{p} \]
@@ -781,7 +781,7 @@ pertanto, in questo caso, esiste \emph{un unico} gruppo di ordine $ pq $ non abe
 	\item Chi sono i gruppi di ordine $ 12 $?
 \end{enumerate}
 \bigskip
-\textbf{Classificazione dei gruppi di ordine 12.}
+\subsubsection{Classificazione dei gruppi di ordine 12}
 
 Quanti possono essere i $ p $-sylow?
 I 3-sylow sono necessariamente di ordine $ 3 $, pertanto ciclici, e possono essere $ n_3 = 1, 4 $. I 2-sylow sono di ordine $ 4 $, quindi isomorfi a $ \Z_2 \times \Z_2 $ o $ \Z_4 $, e sono $ n_2 = 1, 3 $. Se $ P_3 $ non è normale, allora ne ho 4 copie con intersezione banale e rimane spazio solo per un $ P_2 $, che sarà normale.
@@ -818,9 +818,10 @@ Quindi uno tra un 2-sylow e un 3-sylow dev'essere normale, inoltre sono ciclici 
 \subsection{Automorfismi di un gruppo buffo}
 \begin{multicols}{2}
 	Vogliamo scoprire chi è $ \Aut{Q_8 \times D_4} $. Per far questo, possiamo scomporre un qualunque automorfismo $ \varphi $ nelle sue restrizioni ai due termini del prodotto e proiettarli sulle due componenti. Il seguente diagramma magico è molto esplicativo
-	\[ \begin{tikzcd}
+	\[ \begin{tikzcd}[row sep = 0.05 cm]
 	Q_8 \arrow[swap, hook]{dr}{} & & & Q_8 \\
-	D_4 \arrow[swap, hook]{r}{} & G \arrow{r}{\varphi} & G \arrow[swap]{ur}{\Pi_Q}\arrow[swap]{r}{\Pi_D} & D_4
+	 & G \arrow{r}{\varphi} & G \arrow[swap]{ur}{\Pi_Q}\arrow[swap]{dr}{\Pi_D} & \\
+	D_4 \arrow[swap, hook]{ur}{} &  &  & D_4
 	\end{tikzcd}\]
 	Dunque possiamo scomporre l'automorfismo nei quattro omomorfismi
 	\[ \varphi= \left(\begin{matrix}
@@ -943,7 +944,7 @@ L'unicità è lasciata al lettore.
 
 \end{proof}
 	
-\textbf{Classificazione dei Gruppi di Ordine 30.}\\
+\subsubsection{Classificazione dei Gruppi di Ordine 30}
 Tiriamo a caso qualche gruppo di quest'ordine
 \[ \boxed{\mathbb{Z}_2\times\mathbb{Z}_3\times\mathbb{Z}_5} \qquad \boxed{D_{15}} \qquad \boxed{D_5\times\mathbb{Z}_3} \qquad \boxed{D_{3}\times\mathbb{Z}_5} \]
 questi sono distinti perché il primo è l'unico abeliano e i centri di dei seguenti sono rispettivamente $ \{e\},\, \mathbb{Z}_3,\, \mathbb{Z}_5 $. Sappiamo che
